# 3d-clip-for-brain-mri

./: README.md  gitignore  pyproject.toml  run_preprocess.sh  run_task_conversion.sh  run_train.bash
configs/: local
experiments/: 16x_k0  16x_k1  16x_k2  16x_k3  16x_k4  16x_mednext_k0  16x_mednext_k1  16x_mednext_k2  16x_mednext_k3  16x_mednext_k4  16x_swinT_k0  16x_swinT_k1  16x_swinT_k2  16x_swinT_k3  16x_swinT_k4  2x_base_k0  32x_mednext_k0  32x_mednext_k1  32x_mednext_k2  32x_mednext_k3  32x_mednext_k4  4x_mednext_k0  4x_mednext_k1  4x_mednext_k2  4x_mednext_k3  4x_mednext_k4  8x_mednext_k0  8x_mednext_k1  8x_mednext_k2  8x_mednext_k3  8x_mednext_k4  8x_resnet_k0  8x_resnet_k1  8x_resnet_k2  8x_resnet_k3  8x_resnet_k4  cloob_k0  cloob_k1  cloob_k2  cloob_k3  (+53 more)
src/: dataset_conversion.py  generate_embeddings.py  information_retrieval.py  kfold_probing_trained.py  preprocess_neuroclip.py  run_kfold_classification.py  task_conversion_neuroclip.py  train.py
src/data_loading/: YuccaClipDataModule.py  YuccaClipDataset.py
src/image_processing/transforms/: cropping_and_padding.py
src/models/: bert.py  clip.py  mednext.py  projection_head.py  resunet.py  swinunetr.py  swinunetr_ssl.py  unet.py
src/planning/: YuccaClipPlanner.py
src/preprocessing/: YuccaClipPreprocessor.py
src/training/augmentation/: YuccaAugmentationComposer.py
src/training/configuration/: configure_callbacks.py  configure_plans.py
src/utils/: Brain-TR-GammaKnife_Clinical_Information.xlsx  classification.py  data_access.py  embedding_dict.pkl  generators.py  globals.py  metrics.py  wandb.py
