[tool.poetry]
name = "neuroclip"
version = "0.1.0"
description = ""
authors = ["jakekrogh <55795618+jakekrogh@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "src/**/*.py" },
]

[tool.poetry.dependencies]
python = ">=3.11.3,<4"
lightning = ">=2.1.4"
numpy = ">=1.23"
yucca = {git = "https://github.com/Sllambias/yucca", branch="main"}
opencv-python = ">=4.8.1.78"
einops = ">=0.7"
torch = ">=2.1.2,<=2.2.0"
ftfy = "^6.1.3"
matplotlib = ">=3.4.3"
openpyxl = ">=3.0.10"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=6.0.0"
flake8 = ">=6.1.0"
black = ">=23.10.1"

[tool.black]
line-length = 127

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"